// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRUD CRUD Function Should able to query by property GET /users?offset&limit&name 1`] = `
Array [
  Object {
    "email": "jean.doe@gmail.com",
    "name": "Jean Doe",
  },
]
`;

exports[`CRUD CRUD Function Should set partial validation on query GET /users?offset&limit&name 1`] = `
Array [
  Object {
    "email": "jean.doe@gmail.com",
    "name": "Juan Doe",
  },
]
`;

exports[`CRUD Nested CRUD One to Many Function Should find by name GET /users/:parentId/animals?offset&limit  1`] = `
Array [
  Object {
    "name": "Jojo",
  },
]
`;

exports[`CRUD Nested CRUD One to Many Function Should serve GET /users/:parentId/animals/:id 1`] = `
Object {
  "name": "Mimi",
}
`;

exports[`CRUD Nested CRUD One to Many Function Should serve GET /users/:parentId/animals?offset&limit 1`] = `
Array [
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
]
`;

exports[`CRUD Nested CRUD One to Many Function Should serve PATCH /users/:parentId/animals/:id 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "name": "Poe",
}
`;

exports[`CRUD Nested CRUD One to Many Function Should serve POST /users/:parentId/animals 1`] = `
Object {
  "__v": 2,
  "_id": "MONGODB UNIQUE ID",
  "animals": Array [
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "name": "Mimi",
    },
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "name": "Mimi",
    },
  ],
  "email": "john.doe@gmail.com",
  "name": "John Doe",
}
`;

exports[`CRUD Nested CRUD One to Many Function Should serve PUT /users/:parentId/animals/:id 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "name": "Poe",
}
`;

exports[`CRUD Nested CRUD One to Many Function Should set partial validation on PATCH /users/:parentId/animals/:id 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "age": 4,
  "name": "Poe",
}
`;

exports[`CRUD Nested CRUD One to Many Function Should set partial validation on query on GET /users/:parentId/animals?offset&limit 1`] = `
Array [
  Object {
    "age": 5,
    "name": "Jojo",
  },
]
`;

exports[`Facility Should able specify rootPath 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /api/v1/animals",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /api/v1/animals",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /api/v1/animals/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /api/v1/animals/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /api/v1/animals/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/animals/:id",
  ],
  Array [],
]
`;

exports[`Facility Should able to create API version using default entities 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /api/v1/animals",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /api/v1/animals",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /api/v1/animals/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /api/v1/animals/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /api/v1/animals/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/animals/:id",
  ],
  Array [],
]
`;

exports[`Facility Should able to create API versioning with external models 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /api/v1/tags",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /api/v1/tags",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /api/v1/tags/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /api/v1/tags/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /api/v1/tags/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/tags/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /api/v1/animals",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /api/v1/animals",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /api/v1/animals/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /api/v1/animals/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /api/v1/animals/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/animals/:id",
  ],
  Array [
    "13. MongooseOneToMan...eneric.list       -> GET    /api/v1/animals/:pid/tags",
  ],
  Array [
    "14. MongooseOneToMan...eneric.save       -> POST   /api/v1/animals/:pid/tags",
  ],
  Array [
    "15. MongooseOneToMan...eneric.get        -> GET    /api/v1/animals/:pid/tags/:id",
  ],
  Array [
    "16. MongooseOneToMan...eneric.modify     -> PATCH  /api/v1/animals/:pid/tags/:id",
  ],
  Array [
    "17. MongooseOneToMan...eneric.replace    -> PUT    /api/v1/animals/:pid/tags/:id",
  ],
  Array [
    "18. MongooseOneToMan...eneric.delete     -> DELETE /api/v1/animals/:pid/tags/:id",
  ],
  Array [
    "19. MongooseControllerGeneric.list       -> GET    /api/v2/tags",
  ],
  Array [
    "20. MongooseControllerGeneric.save(data) -> POST   /api/v2/tags",
  ],
  Array [
    "21. MongooseControllerGeneric.get(id)    -> GET    /api/v2/tags/:id",
  ],
  Array [
    "22. MongooseControllerGeneric.modify     -> PATCH  /api/v2/tags/:id",
  ],
  Array [
    "23. MongooseControllerGeneric.replace    -> PUT    /api/v2/tags/:id",
  ],
  Array [
    "24. MongooseControllerGeneric.delete(id) -> DELETE /api/v2/tags/:id",
  ],
  Array [
    "25. MongooseControllerGeneric.list       -> GET    /api/v2/animals",
  ],
  Array [
    "26. MongooseControllerGeneric.save(data) -> POST   /api/v2/animals",
  ],
  Array [
    "27. MongooseControllerGeneric.get(id)    -> GET    /api/v2/animals/:id",
  ],
  Array [
    "28. MongooseControllerGeneric.modify     -> PATCH  /api/v2/animals/:id",
  ],
  Array [
    "29. MongooseControllerGeneric.replace    -> PUT    /api/v2/animals/:id",
  ],
  Array [
    "30. MongooseControllerGeneric.delete(id) -> DELETE /api/v2/animals/:id",
  ],
  Array [
    "31. MongooseOneToMan...eneric.list       -> GET    /api/v2/animals/:pid/tags",
  ],
  Array [
    "32. MongooseOneToMan...eneric.save       -> POST   /api/v2/animals/:pid/tags",
  ],
  Array [
    "33. MongooseOneToMan...eneric.get        -> GET    /api/v2/animals/:pid/tags/:id",
  ],
  Array [
    "34. MongooseOneToMan...eneric.modify     -> PATCH  /api/v2/animals/:pid/tags/:id",
  ],
  Array [
    "35. MongooseOneToMan...eneric.replace    -> PUT    /api/v2/animals/:pid/tags/:id",
  ],
  Array [
    "36. MongooseOneToMan...eneric.delete     -> DELETE /api/v2/animals/:pid/tags/:id",
  ],
  Array [],
]
`;

exports[`Facility Should able to create API versioning with multiple facility 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /api/v1/animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /api/v1/animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /api/v1/animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /api/v1/animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /api/v1/animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /api/v2/animals",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /api/v2/animals",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /api/v2/animals/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /api/v2/animals/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /api/v2/animals/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /api/v2/animals/:id",
  ],
  Array [],
]
`;

exports[`Facility Should able to load external model 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /absolutes",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /absolutes",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /absolutes/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /absolutes/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /absolutes/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /absolutes/:id",
  ],
  Array [],
]
`;

exports[`Facility Should able to load external model using relative path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /relatives",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /relatives",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /relatives/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /relatives/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /relatives/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /relatives/:id",
  ],
  Array [],
]
`;

exports[`Facility Should load default models if no option specified 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [],
]
`;

exports[`Facility Should not generate model if not registered as mongoose model 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "No controller found",
  ],
]
`;

exports[`Open API Should mark createdAt property as readonly  1`] = `
Object {
  "properties": Object {
    "createdAt": Object {
      "format": "date-time",
      "readOnly": true,
      "type": "string",
    },
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API Should mark id property as readonly  1`] = `
Object {
  "properties": Object {
    "id": Object {
      "readOnly": true,
      "type": "string",
    },
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API Should mark ref populate property as readonly and write only 1`] = `
Object {
  "properties": Object {
    "animals": Object {
      "items": Object {
        "$ref": "#/components/schemas/Animal",
      },
      "readOnly": true,
      "type": "array",
      "writeOnly": true,
    },
    "email": Object {
      "type": "string",
    },
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open API Should mark updatedAt property as readonly  1`] = `
Object {
  "properties": Object {
    "name": Object {
      "type": "string",
    },
    "updatedAt": Object {
      "format": "date-time",
      "readOnly": true,
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Repository Should able to use One To Many Repository in isolation 1`] = `
Object {
  "__v": 1,
  "_id": "MONGODB UNIQUE ID",
  "animals": Array [
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "name": "Mimi",
    },
  ],
  "email": "john.doe@gmail.com",
  "name": "John Doe",
}
`;

exports[`Repository Should able to use Repository in isolation 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "email": "john.doe@gmail.com",
  "name": "John Doe",
}
`;
